Fetch done render done

--- a/manifest.yml
+++ b/manifest.yml
@@ -4,7 +4,7 @@ modules:
       resource: main
       resolver:
         function: resolver
-      title: customui122
+      title: Cloud Cost
   function:
     - key: resolver
       handler: index.handler
@@ -12,7 +12,6 @@ resources:
   - key: main
     path: static/hello-world/build
 
-        
 permissions:
   scopes:
     - storage:app
@@ -24,4 +23,4 @@ permissions:
 app:
   runtime:
     name: nodejs22.x
-  id: ari:cloud:ecosystem::app/ae907553-8017-4c6b-81f5-232903cb0f23
+  id: ari:cloud:ecosystem::app/395a8d81-441c-4df2-8a53-dedefc4640b3
