--- a/manifest.yml
+++ b/manifest.yml
@@ -4,7 +4,7 @@ modules:
       resource: main
       resolver:
         function: resolver
-      title: Cloud Cost
+      title: CUR_REPORT
   function:
     - key: resolver
       handler: index.handler
@@ -23,4 +23,4 @@ permissions:
 app:
   runtime:
     name: nodejs22.x
-  id: ari:cloud:ecosystem::app/395a8d81-441c-4df2-8a53-dedefc4640b3
+  id: ari:cloud:ecosystem::app/339719e8-1b1e-4cb3-8483-c3293ccf51d2
