--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "dependencies": {
     "@aws-sdk/client-athena": "^3.758.0",
     "@aws-sdk/client-s3": "^3.758.0",
-    "@forge/api": "^5.1.0-next.8",
+    "@forge/api": "^5.1.1",
     "@forge/bridge": "^2.0.0",
-    "@forge/resolver": "1.6.7",
+    "@forge/resolver": "^1.6.7",
     "aws-sdk": "^2.1692.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
